apps/kubernetes/k3s/apps/authentik/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    reflector.v1.k8s.emberstack.com/reflects: "traefik/hughboi-tls"
