apps/kubernetes/k3s/apps/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.hughboi.cc`)
      kind: Rule
      services:
        - name: authentik-server
          port: 9000
  tls:
    secretName: hughboi-tls
